<resources>
    <string name="app_name">Bicyo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_discover">Discover</string>
    <string name="txt_groups">Groups</string>
    <string name="txt_profile">Perfil</string>
    <string name="txt_buscarRutas">Buscar rutas</string>
    <string name="login_with_social">o inicia sesión con redes sociales</string>
    <string name="btn_login_with_google">inicar con google</string>
    <string name="btn_login_with_facebook">iniciar con facebook</string>
    <string name="login_app_name_display">BICyO</string>
    <string name="login_login_title">iniciar sesión</string>
    <string name="login_hint_password">contraseña</string>
    <string name="login_login_btn">iniciar sesión</string>
    <string name="login_text_no_account_message">aún no tienes cuenta?</string>
    <string name="login_register_link">registrarse</string>
    <string name="signup_with_social">o regístrate con redes sociales</string>
    <string name="btn_signup_with_google">registrarse con google</string>
    <string name="btn_signup_with_facebook">registrarse con facebook</string>
    <string name="signup_app_name_display">BICyO</string>
    <string name="signup_login_title">registrarse</string>
    <string name="signup_hint_password">contraseña</string>
    <string name="signup_login_btn">registrarse</string>
    <string name="signup_text_no_account_message">ya tienes una cuenta</string>
    <string name="signup_login_link">inica sesión</string>
    <string name="profile_name">Mi perfil</string>
    <string name="profile_Biker">Tadej Pogacar</string>
    <string name="profile_mail">abcd@gmail.com</string>
    <string name="profile_description">Como un ingeniero altamente motivado y orientado a conseguir resultados dentro...</string>
    <string name="btn_profileEdition">editar perfil</string>
    <string name="txt_routes">10 rutas publicadas</string>
    <string name="txt_profileGroups">4 grupos</string>
    <string name="txt_map">explorar / Parque Bicentenario</string>
    <string name="txt_nombreRuta">Nombre de la ruta</string>
    <string name="btn_crearMap">Crear</string>
</resources>