<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="50dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayoutsignup"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside">

        <TextView
            android:id="@+id/textView3signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:capitalize="none"
            android:fontFamily="@font/inter_black"
            android:text="@string/login_app_name_display"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="80sp"
            app:layout_constraintBottom_toTopOf="@+id/textView2signup"
            app:layout_constraintStart_toStartOf="@+id/textView2signup"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/inter_extrabold"
            android:text="@string/signup_login_title"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3signup" />

        <Button
            android:id="@+id/button3signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/black"
            android:onClick="signup"
            android:text="@string/signup_login_btn"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toTopOf="@id/register_textsignup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout4signup" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/register_textsignup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3signup">

            <TextView
                android:id="@+id/textView4signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_text_no_account_message"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/textView5signup"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5signup"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginLeft="10dp"
                android:clickable="true"
                android:fontFamily="@font/inter_black"
                android:onClick="goToLogin"
                android:text="@string/signup_login_link"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:flow_horizontalAlign="center"
                app:layout_constraintEnd_toStartOf="@+id/textView4signup"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView4signup"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout4signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2signup">

            <ImageView
                android:id="@+id/imageViewsignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonNamesignup"
                app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonNamesignup"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editTextTextPersonNamesignup"
                app:srcCompat="@drawable/ic_baseline_person_24" />

            <EditText
                android:id="@+id/editTextTextPersonNamesignup"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:ems="10"
                android:fontFamily="@font/inter_medium"
                android:hint="correo electrónico"
                android:inputType="textPersonName"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageViewsignup" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout4signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/button3signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

            <ImageView
                android:id="@+id/imageView4signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/editTextTextPasswordsignup"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_password" />

            <EditText
                android:id="@+id/editTextTextPasswordsignup"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:ems="10"
                android:fontFamily="@font/inter_medium"
                android:hint="@string/login_hint_password"
                android:imeActionLabel="@string/app_name"
                android:inputType="textPassword"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imageView4signup"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutsignup"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#000000"
        android:backgroundTintMode="add"
        android:paddingHorizontal="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2signup"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:id="@+id/textViewsignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/signup_with_social"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonsignup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/button2signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/inter_bold"
            android:includeFontPadding="false"
            android:letterSpacing="0"
            android:onClick="signup"
            android:text="@string/btn_signup_with_facebook"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:cornerRadius="10dp"
            app:icon="@drawable/ic_facebook"
            app:iconTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonsignup" />

        <Button
            android:id="@+id/buttonsignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:capitalize="none"
            android:fontFamily="@font/inter_bold"
            android:includeFontPadding="false"
            android:letterSpacing="0"
            android:onClick="signup"
            android:text="@string/btn_signup_with_google"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:cornerRadius="10dp"
            app:icon="@drawable/ic_google"
            app:iconTint="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/button2signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewsignup" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>